Changing index.hmtl

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app>
   <head>
     <meta charset="utf-8">
-    <title>Big PeePee</title>
+    <title>Fuck</title>
     <style>html, body {
       height: 100%;
       margin: 0;
