--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <div class="my-block">
       <p style="color:aqua;font-size:200px">Hello.</p>
-      <p style="color:greenyellow;font-size:60px">I'm Ethan Britton and Jackson Essinger.</p>
+      <p style="color:greenyellow;font-size:60px">We're Ethan and Jackson.</p>
       <p style="color:red;font-size:60px">Click <a target="_blank" rel="noopener noreferrer" href=http://pointl.us>here</a> to learn more about us.</p>
     </div>
 
