changed 'me' to 'us' and added my name

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
   <body>
 
     <div class="my-block">
-      <p style="color:aqua;font-size:800px">Hello.</p>
-      <p style="color:greenyellow;font-size:60px">I'm Ethan Britton.</p>
-      <p style="color:red;font-size:60px">Click <a target="_blank" rel="noopener noreferrer" href=http://pointl.us>here</a> to learn more about me.</p>
+      <p style="color:aqua;font-size:200px">Hello.</p>
+      <p style="color:greenyellow;font-size:60px">I'm Ethan Britton and Jackson Essinger.</p>
+      <p style="color:red;font-size:60px">Click <a target="_blank" rel="noopener noreferrer" href=http://pointl.us>here</a> to learn more about us.</p>
     </div>
 
   </body>
