--- a/index.html
+++ b/index.html
@@ -1,34 +1,37 @@
 <!doctype html>
-<html lang="en" ng-app='index'>
+<html lang="en" ng-app="Index" ng-controller='customlink'>
   <head>
+    <link rel="shortcut icon" type="image/jpg" ng-href="{{chosenPic}}">
     <meta charset="utf-8">
     <title>Fuck</title>
+
     <style>html, body {
       height: 100%;
       margin: 0;
       padding: 0;
       width: 100%;
     }
-
-  body {
+    body {
       display: table;
     }
-
-  .my-block {
+    .my-block {
       text-align: center;
       display: table-cell;
       vertical-align: middle;
     }</style>
+
     <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.css" />
     <script src="lib/angular/angular.js"></script>
-	  <script src="index.js"></script>
+    <script src="IndexJs/index.js"></script>
+    <script src="IndexJs/index.shuffler.js"></script>
+    <script src="IndexJs/index.customlink.js"></script>
   </head>
   <body>
 
     <div class="my-block" ng-controller='ShufflerController'>
       <p style="color:aqua;font-size:200px">Hello.</p>
       <p style="color:greenyellow;font-size:60px">We're Ethan and Jackson.</p>
-      <p style="color:red;font-size:60px">Click <a href ng-click='GenerateSite()' target="_blank">here</a> to learn more about me.</p>
+      <p style="color:red;font-size:60px">Click <a href ng-click='GenerateSite()' target="_blank">here</a> to learn more about us.</p>
     </div>
 
   </body>
