Added Ico Files Please Work

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en" ng-app="Index" ng-controller='customlink'>
   <head>
-    <link rel="shortcut icon" type="image/jpg" ng-href="{{chosenPic}}">
+    <link rel="shortcut icon" type="image/x-icon" ng-href="{{chosenPic}}">
     <meta charset="utf-8">
     <title>Fuck</title>
 
