Trying to Fix Files

--- a/dance_page.html
+++ b/dance_page.html
@@ -62,7 +62,7 @@
     <script src="lib/angular/angular.js"></script>
     <script src="danceJs/dance.js"></script>
     <script src="danceJs/favicon.js"></script>
-    <script src="danceJs/dance.update_nav.js"></script>
+    <script src="danceJs/dance.update.nav.js"></script>
     <script src="danceJs/update_video.js"></script>
   </head>
 
