--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <script src="lib/angular/angular.js"></script>
     <script src="IndexJs/index.js"></script>
     <script src="IndexJs/index.shuffler.js"></script>
-    <script src="indexJs/index.update_nav.js"></script>
+    <script src="indexJs/index.update.nav.js"></script>
     <script src="IndexJs/favicon.js"></script>
   </head>
   <body>
