Trying to Fix Index

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       width: 100%;
     }
     body {
-      background-image: url('img/background/background.jpg');
+      background-image: url('img/background/background.JPG');
       background-color: coral;
 
       height: 90%;
@@ -28,7 +28,7 @@
     <script src="lib/angular/angular.js"></script>
     <script src="IndexJs/index.js"></script>
     <script src="IndexJs/index.shuffler.js"></script>
-    <script src="indexJs/index.update.nav.js"></script>
+    <script src="IndexJs/index.update.nav.js"></script>
     <script src="IndexJs/favicon.js"></script>
   </head>
   <body>
